# metrisight

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
metrisight/: __init__.py  charts.py  cli.py  detector.py  prometheus.py  simulator.py
tests/: test_detector.py  test_prometheus.py
