[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrisight"
dynamic = ["version"]
description = "Lightweight metric anomaly detection dashboard with Prometheus streaming"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "MetriSight Contributors"},
]
keywords = [
    "aiops",
    "anomaly-detection",
    "metrics",
    "monitoring",
    "observability",
    "prometheus",
    "streamlit",
    "time-series",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "streamlit>=1.30.0",
    "streamlit-autorefresh>=1.0.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/pallaprolus/metrisight"
Repository = "https://github.com/pallaprolus/metrisight"
Issues = "https://github.com/pallaprolus/metrisight/issues"

[project.scripts]
metrisight = "metrisight.cli:main"

[tool.setuptools.dynamic]
version = {attr = "metrisight.__version__"}

[tool.setuptools.packages.find]
include = ["metrisight*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
